Update to iDempiere 7.1 and Java 11