@@ -19,7 +19,6 @@ package com.ghintech.location;
 
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
-import java.util.Properties;
 import java.util.logging.Level;
 
 import org.adempiere.webui.LayoutUtils;
@@ -34,7 +33,6 @@ import org.adempiere.webui.event.ValueChangeEvent;
 import org.adempiere.webui.theme.ThemeManager;
 import org.adempiere.webui.window.WFieldRecordInfo;
 import org.compiere.model.GridField;
-import org.compiere.model.MLocation;
 import org.compiere.model.MLocationLookup;
 import org.compiere.util.CLogger;
 import org.compiere.util.Env;
@@ -108,7 +106,7 @@ public class VEWLocationEditor extends WEditor implements EventListener<Event>, 
     {
         if (m_value == null)
             return null;
-        return new Integer(m_value.getC_Location_ID());
+        return m_value.getC_Location_ID();
     }
 
     @Override
@@ -205,7 +203,7 @@ public class VEWLocationEditor extends WEditor implements EventListener<Event>, 
 		            int C_Location_ID = 0;
 		            if (m_value != null)
 		                C_Location_ID = m_value.getC_Location_ID();
-		            Integer ii = new Integer(C_Location_ID);
+		            Integer ii = Integer.valueOf(C_Location_ID);
 		            //  force Change - user does not realize that embedded object is already saved.
 		            ValueChangeEvent valuechange = new ValueChangeEvent(VEWLocationEditor.this,getColumnName(),null,null);
 		            fireValueChange(valuechange);   //  resets m_mLocation
